--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
   color: azure;
   width: 100%;
-  height: 100vh;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
